update README format; Polygon supports .ts out of the box

--- a/features.toml
+++ b/features.toml
@@ -14,7 +14,7 @@ free_offerings = [
 client_libraries = [
     "Python",
     "Go",
-    "Javascript",
+    "TypeScript",
     "PHP",
     "Kotlin"
 ]
